# ToolAgents

./: .gitignore  .readthedocs.yaml  0.26.0  AGENTS.md  CHANGELOG.md  CLAUDE.md  CURRENT_BRANCH_STATE_REPORT.md  LICENSE  ReadMe.md  function_tool.py  mkdocs.yml  pyproject.toml  pytest.ini  smoke_test_navigable_memory.py  test.md
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
agents/: __init__.py  chat_api_agent.py  mistral_agent.py  ollama_agent.py
docs/: index.md
docs/api/: agents.md  knowledge.md  messages.md  providers.md  tools.md  utilities.md
docs/components/: agents.md  messages.md  providers.md  tools.md
docs/examples/: advanced-agents.md  basic-agents.md  code-interpreter.md  memory.md  web-research.md
docs/getting-started/: installation.md  quick-start.md
docs/guides/: basic-usage.md  chat-history.md  custom-tools.md  streaming.md
docs/user-guide/: configuration.md  getting-started.md  installation.md
examples/: personal_mcp_tools.py
examples/advanced_agent/: advanced_chat_agent.py  advanced_chat_agent_test.py  example_tools.py  mmm.py  test_chat_history_2.json
examples/agents/: chat_history_example.json  collaborative_agents.py  deep_research_agent.py  discord_agent_example.py  example_async_chat_api_agent.py  example_async_streaming_chat_api_agent.py  example_chat_api_agent.py  example_chat_history.py  example_coding_agent.py  example_function_tool_pre_post_processors.py  example_gitea_agent.py  example_knowledge.py  (+14 more)
examples/agents/virtual_game_master/world_engine/agora/: build-frontend.sh  pyproject.toml
examples/agents/virtual_game_master/world_engine/agora/docs/agents-workflow/: agent-guide-chat.md  agent-guide-issues.md  agent-guide-kb.md
examples/agents/virtual_game_master/world_engine/agora/docs/feedback/: editor-agent-agora-feedback.md  lore-agent-agora-feedback.md
examples/agents/virtual_game_master/world_engine/agora/frontend/: index.html
examples/agents/virtual_game_master/world_engine/agora/frontend/src/: App.tsx  main.tsx
examples/agents/virtual_game_master/world_engine/agora/frontend/src/components/: MentionRenderer.tsx
examples/agents/virtual_game_master/world_engine/agora/frontend/src/components/layout/: Layout.module.css
examples/agents/virtual_game_master/world_engine/agora/frontend/src/components/ui/: Avatar.module.css  Badge.module.css  EmptyState.tsx  FormField.tsx  IconButton.module.css  IconButton.tsx  Modal.module.css  Section.module.css  Section.tsx  Select.module.css  TextArea.module.css  Tooltip.module.css  Tooltip.tsx
examples/agents/virtual_game_master/world_engine/agora/frontend/src/hooks/: useCustomFields.ts  useImportExport.ts  useProjectAgents.ts  useSSE.ts  useTasks.ts  useTemplates.ts
examples/agents/virtual_game_master/world_engine/agora/frontend/src/lib/: cx.ts  fileUtils.ts
examples/agents/virtual_game_master/world_engine/agora/frontend/src/pages/: CustomFieldsAdmin.module.css  CustomFieldsAdmin.tsx  Dashboard.module.css  Dashboard.tsx  KBEditor.module.css  KBEditor.tsx  KnowledgeBase.module.css  KnowledgeBase.tsx  ProjectOverview.tsx  ProjectSettings.module.css  ProjectView.tsx  TaskDetail.module.css  TemplatesPage.tsx  Terminals.tsx
examples/agents/virtual_game_master/world_engine/agora/frontend/src/types/: filesystem.d.ts
examples/agents/virtual_game_master/world_engine/agora/src/agora/api/routes/: kb.py  mentions.py  projects.py  sessions.py  tasks.py  teams.py  utilities.py
examples/agents/virtual_game_master/world_engine/agora/src/agora/cli/: chat_commands.py  task_commands.py
examples/agents/virtual_game_master/world_engine/agora/src/agora/db/: __init__.py
examples/agents/virtual_game_master/world_engine/agora/src/agora/db/models/: agent.py  project_agent.py  task.py
examples/agents/virtual_game_master/world_engine/agora/src/agora/mcp/: client.py
examples/agents/virtual_game_master/world_engine/agora/src/agora/realtime/: broadcaster.py  presence.py
examples/agents/virtual_game_master/world_engine/agora/src/agora/schemas/: agent.py  custom_field.py  kb.py  session.py
examples/agents/virtual_game_master/world_engine/agora/src/agora/services/: field_validation.py  kb_service.py  mention_service.py
provider/: __init__.py  chat_api_with_tools.py  llama_cpp_server.py  tgi_server.py  vllm_server.py
scripts/: detect_bidi.py  detect_bidi_full.py
tests/: advanced_chat_agent_test.py  conftest.py  example_rag_bars.py  test_advanced_agent.py  test_advanced_chat_formatter.py  test_chat_api_agent.py  test_chat_history_after_chat_api.json  test_chat_history_after_llama.json  test_chat_history_after_mistral.json  test_compatibility.py  test_extensions.py  test_formatter_chat_history.json  test_llama_31_agent.py  test_mistral_agent.py  test_mistral_agent_memory.py  test_ollama_agent.py  test_public_api.py  test_text_splitter.py  test_tools.py
utilities/: __init__.py  chat_api_with_tools.py  testus_tool.py
(+589 files in other folders)
