[build-system]
requires = [  "setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "ToolAgents"
version = "0.2.8"
description = "ToolAgents is a lightweight and flexible framework for creating function-calling agents with various language models and APIs."

readme = "ReadMe.md"

requires-python = ">=3.10"
classifiers = [ "Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent" ]

dependencies = [
    "pydantic>=2.5.3",
    "requests>=2.31.0",
    "pydantic-settings",
    "docstring_parser",
    "aiohttp",
    "mistralai",
    "mistral-common",
    "openai",
    "anthropic",
    "groq"
]

[project.optional-dependencies]
additional_deps = [
    "sentence_transformers",
    "hdbscan",
    "transformers",
    "sentencepiece",
    "protobuf",
    "chromadb",
    "pdf2image",
    "pytesseract",
    "lxml_html_clean",
]
search = ["googlesearch-python", "markdownify", "camoufox"]

[[project.authors]]
name = "Maximilian Winter"
email = "maximilian.winter.91@gmail.com"


[project.urls]
Homepage = "https://github.com/Maximilian-Winter/ToolAgents"
"Bug Tracker" = "https://github.com/Maximilian-Winter/ToolAgents/issues"

[tool.setuptools.packages.find]
where = ["src"]

