[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "ToolAgents"
version = "0.2.9"
description = "ToolAgents is a lightweight and flexible framework for creating function-calling agents with various language models and APIs."
readme = "ReadMe.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "aiohttp",
    "anthropic",
    "docstring_parser",
    "groq",
    "httpx",
    "mistral-common",
    "mistralai",
    "openai",
    "pydantic",
    "requests",
]

[project.optional-dependencies]
advanced = [
    "PyYAML",
]
storage = [
    "SQLAlchemy",
]
memory = [
    "chromadb",
    "hdbscan",
    "numpy",
    "sentence-transformers",
    "torch",
]
local-inference = [
    "protobuf",
    "sentencepiece",
    "transformers",
]
ocr = [
    "PyMuPDF",
    "joblib",
    "pdf2image",
    "pytesseract",
]
search = [
    "beautifulsoup4",
    "camoufox",
    "googlesearch-python",
    "html5lib",
    "trafilatura",
]
mcp = [
    "mcp[cli]",
]
all = [
    "PyMuPDF",
    "PyYAML",
    "SQLAlchemy",
    "beautifulsoup4",
    "camoufox",
    "chromadb",
    "googlesearch-python",
    "hdbscan",
    "html5lib",
    "joblib",
    "mcp[cli]",
    "numpy",
    "pdf2image",
    "protobuf",
    "pytesseract",
    "sentence-transformers",
    "sentencepiece",
    "torch",
    "transformers",
    "trafilatura",
]

[[project.authors]]
name = "Maximilian Winter"
email = "maximilian.winter.91@gmail.com"

[project.urls]
Homepage = "https://github.com/Maximilian-Winter/ToolAgents"
"Bug Tracker" = "https://github.com/Maximilian-Winter/ToolAgents/issues"

[tool.setuptools.packages.find]
where = ["src"]
