[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agora"
version = "1.0.0"
description = "Agora — Multi-agent team coordination platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy[asyncio]",
    "aiosqlite",
    "pydantic",
    "pydantic-settings",
    "alembic",
    "httpx",
    "typer[all]",
    "mcp",
]

[project.scripts]
agora = "agora.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/agora"]
